objects/MTRNS__MTRNSSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Provides ability to specify custom implementations for use with Factory classes.</description>
    <fields>
        <fullName>MTRNS__AllowManualUnlock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if manual unlocking is enabled in the MIM UI. The Org Default should be false. To grant this ability, add a custom setting per user or profile.</description>
        <inlineHelpText>This field indicates if manual unlocking is enabled in the MIM UI. The Org Default should be false. To grant this ability, add a custom setting per user or profile.</inlineHelpText>
        <label>Allow Manual UI Unlock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MTRNS__EnableMethodTelemetryLogging__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if method entry and exit telemetry logging is included in the logs. The Org Default should be false. To grant this ability, add a custom setting per user or profile.</description>
        <inlineHelpText>This field indicates if method entry and exit telemetry logging is included in the logs. The Org Default should be false. To grant this ability, add a custom setting per user or profile.</inlineHelpText>
        <label>Enable Method Telemetry Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MTRNS__LoggingLevelsToCapture__c</fullName>
        <description>The Administrator populates this optional text field with the logging levels for which the system should capture logs. This setting uses the Salesforce System.LoggingLevels conventions of NONE,INFO,DEBUG,ERROR,FINE,FINER,FINEST using inclusivity.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Logging Levels to Capture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTRNS__LoggingProvider__c</fullName>
        <description>The Administrator populates this optional text field with the fully-qualified Apex class name of the Logging Provider class that implements the EFPIO.ILoggingProvider_v1 interface. If not set, the system uses the same logging provider set within the EFPIO Logging Settings.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Logging Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTRNS__MaxLoggingRetryAttempts__c</fullName>
        <description>The Administrator populates this optional number field with the total number of retries the system will attempt when it encounters a deadlock trying to update the log record.</description>
        <label>Max Logging Retry Attempts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTRNS__RecordLockTimeoutInSeconds__c</fullName>
        <defaultValue>900</defaultValue>
        <description>The Administrator populates this required number field with the total number of seconds a record lock is good for.</description>
        <label>Record Lock Timeout in Seconds</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MTRNS Settings</label>
</CustomObject>